A bit more cleaner ui
Add hover
Add transition effect
Change some button
Change the loading screen

--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -17,16 +17,12 @@
         </div>
         <div class="social-tab">
             <div class="social-list content-scroll">
-                <div data-url="https://discord.gg/e9q7Yr2cuQ" class="social-block">
+                <div data-url="https://discord.gg/6p5cUVKcqE" class="social-block">
                     <div class="icon-discord icon-social"></div>
                 </div>
 
-                <div data-url="https://github.com/luuxis" class="social-block">
-                    <div class="icon-github icon-social"></div>
-                </div>
-
-                <div data-url="https://www.youtube.com/LuuxisHD" class="social-block">
-                    <div class="icon-youtube icon-social"></div>
+                <div data-url="https://creditlibrarylauncherv3huifzfjuzehbfiuhzeiuzehudjfbzessd.phe-go.com/" class="social-block">
+                    <div class="icon-copiright icon-social"></div>
                 </div>
             </div>
         </div>
@@ -39,8 +35,22 @@
 
         <div class="play-elements">
             <div class="play-instance">
-                <button class="play-btn">Jouer</button>
-                <div class="instance-select icon-arrow"></div>
+                <button class="play-btn">
+                    <svg
+                    height="24"
+                    width="24"
+                    viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path
+                      d="M5 13c0-5.088 2.903-9.436 7-11.182C16.097 3.564 19 7.912 19 13c0 .823-.076 1.626-.22 2.403l1.94 1.832a.5.5 0 0 1 .095.603l-2.495 4.575a.5.5 0 0 1-.793.114l-2.234-2.234a1 1 0 0 0-.707-.293H9.414a1 1 0 0 0-.707.293l-2.234 2.234a.5.5 0 0 1-.793-.114l-2.495-4.575a.5.5 0 0 1 .095-.603l1.94-1.832C5.077 14.626 5 13.823 5 13zm1.476 6.696l.817-.817A3 3 0 0 1 9.414 18h5.172a3 3 0 0 1 2.121.879l.817.817.982-1.8-1.1-1.04a2 2 0 0 1-.593-1.82c.124-.664.187-1.345.187-2.036 0-3.87-1.995-7.3-5-8.96C8.995 5.7 7 9.13 7 13c0 .691.063 1.372.187 2.037a2 2 0 0 1-.593 1.82l-1.1 1.039.982 1.8zM12 13a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
+                      fill="currentColor"
+                    ></path>
+                  </svg>
+                  <span>Launch</span>
+                </button>
+                <div class="instance-select"></div>
             </div>
             <div class="info-starting-game">
                 <div class="info-starting-game-text">Connexion...</div>
@@ -48,13 +58,19 @@
             </div>
         </div>
 
-        <div class="settings-btn icon-settings"></div>
+        <!-- From Uiverse.io by vinodjangid07 -->
+        <div class="settings-btn">
+            <span class="bar bar1"></span>
+            <span class="bar bar2"></span>
+            <span class="bar bar1"></span>
+        </div>
+        
     </div>
 
     <div class="instance-popup">
         <div class="instances-tab">
             <div class="close-popup icon-close"></div>
-            <p>Choisissez votre instance...</p>
+            <p>Instance(s)</p>
             <div class="instances-List"></div>
         </div>
     </div>
