--- a/src/panels/login.html
+++ b/src/panels/login.html
@@ -1,10 +1,31 @@
 <div class="container">
     <div class="login-home login-tabs">
-        <div class="login-text">Veuillez vous identifier afin de jouer.</div>
+        <div class="login-text">Authentification avec microsoft</div>
 
         <div class="login-options">
-            <button class="connect connect-home">Connexion</button>
-            <button class="cancel cancel-home"  style="display: none;">annuler</button>
+            <!-- From Uiverse.io by adamgiebl -->
+            <div class="button-container">
+                <button class="connect connect-home cssbuttons-io-button">
+                  Login
+                  <div class="icon">
+                    <svg
+                      height="24"
+                      width="24"
+                      viewBox="0 0 24 24"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path
+                        d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                        fill="currentColor"
+                      ></path>
+                    </svg>
+                  </div>
+                </button>
+            </div>
+            
+
+            <button class="cancel cancel-home"  style="display: none;">Annuler</button>
         </div>
     </div>
 
@@ -17,7 +38,7 @@
 
         <div class="login-options">
             <button class="connect connect-offline">Connexion</button>
-            <button class="cancel cancel-offline" style="display: none;">annuler</button>
+            <button class="cancel cancel-offline" style="display: none;">Annuler</button>
         </div>
     </div>
 
@@ -31,7 +52,7 @@
 
         <div class="login-options">
             <button class="connect connect-AZauth">Connexion</button>
-            <button class="cancel cancel-AZauth" style="display: none;">annuler</button>
+            <button class="cancel cancel-AZauth" style="display: none;">Annuler</button>
         </div>
     </div>
 
@@ -44,7 +65,7 @@
 
         <div class="login-options">
             <button class="connect connect-AZauth-A2F">Valider</button>
-            <button class="cancel cancel-AZauth-A2F">annuler</button>
+            <button class="cancel cancel-AZauth-A2F">Annuler</button>
         </div>
     </div>
 </div>
