--- a/src/panels/settings.html
+++ b/src/panels/settings.html
@@ -11,7 +11,7 @@
     </div>
 
     <div id="account-tab" class="container-settings active-container-settings">
-        <div class="titre-tab">Comptes joueurs</div>
+        <div class="titre-tab element-hover">Comptes joueurs</div>
 
         <div class="accounts-list content-scroll">
             <div class="account" id="add">
@@ -24,7 +24,7 @@
     </div>
 
     <div id="java-tab" class="container-settings content-scroll">
-        <div class="titre-tab">Paramètre de votre RAM</div>
+        <div class="titre-tab element-hover">Paramètre de votre RAM</div>
         <div class="settings-elements-box">
             <div class="setting-text">
                 Définition de la RAM alloué à votre jeu, une quantité plus important augmenteras les performances de
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <div class="titre-tab">Emplacement de Java</div>
+        <div class="titre-tab element-hover">Emplacement de Java</div>
         <div class="settings-elements-box">
             <div class="setting-text">
                 Le launcher utilise une version embarquée de Java.<br>
@@ -75,7 +75,7 @@
     </div>
 
     <div id="resolution-tab" class="container-settings">
-        <div class="titre-tab">Paramètres de resolution Minecraft</div>
+        <div class="titre-tab element-hover">Paramètres de resolution Minecraft</div>
         <div class="settings-elements-box">
             <div class="setting-text">
                 Définissez une résolution personnalisée afin d'avoir un jeu adapté à votre écran.<br>
@@ -94,7 +94,7 @@
     </div>
 
     <div id="launcher-tab" class="container-settings content-scroll">
-        <div class="titre-tab">Paramètre de téléchargement</div>
+        <div class="titre-tab element-hover-2">Paramètre de téléchargement</div>
         <div class="settings-elements-box">
             <div class="setting-text">
                 Ce paramètre détermine le nombre maximum de fichiers pouvant être téléchargés simultanément lors de la
@@ -112,7 +112,7 @@
             </div>
         </div>
 
-        <div class="titre-tab">Thème clair et sombre</div>
+        <div class="titre-tab element-hover-2">Thème clair et sombre</div>
         <div class="settings-elements-box">
             <div class="setting-text">
                 Choisissez entre le thème clair et le thème sombre pour personnaliser l'apparence du launcher.<br><br>
