Add a hover on close-btn in the launcher tab

--- a/src/panels/settings.html
+++ b/src/panels/settings.html
@@ -127,7 +127,7 @@
             </div>
         </div>
 
-        <div class="titre-tab">Comportement du launcher au démarrage</div>
+        <div class="titre-tab element-hover-2">Comportement du launcher au démarrage</div>
         <div class="settings-elements-box">
             <div class="setting-text">
                 Vous pouvez choisir si le launcher se ferme automatiquement ou reste ouvert lorsque vous lancez le jeu.
