--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -70,7 +70,7 @@
     <div class="instance-popup">
         <div class="instances-tab">
             <div class="close-popup icon-close"></div>
-            <p>Instance(s)</p>
+            <p id="instance-count-text">Instance(s)</p>
             <div class="instances-List"></div>
         </div>
     </div>
