--- a/src/panels/home.html
+++ b/src/panels/home.html
@@ -13,7 +13,8 @@
     <div class="home-bottom">
         <div class="new-tab">
             <div class="titre-tab-new">Actualités</div>
-            <div class="news-list content-scroll"></div>
+            <div class="news-list">
+            </div>
         </div>
         <div class="social-tab">
             <div class="social-list content-scroll">
@@ -21,7 +22,8 @@
                     <div class="icon-discord icon-social"></div>
                 </div>
 
-                <div data-url="https://creditlibrarylauncherv3huifzfjuzehbfiuhzeiuzehudjfbzessd.phe-go.com/" class="social-block">
+                <div data-url="https://creditlibrarylauncherv3huifzfjuzehbfiuhzeiuzehudjfbzessd.phe-go.com/"
+                    class="social-block">
                     <div class="icon-copiright icon-social"></div>
                 </div>
             </div>
@@ -36,35 +38,32 @@
         <div class="play-elements">
             <div class="play-instance">
                 <button class="play-btn">
-                    <svg
-                    height="24"
-                    width="24"
-                    viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path
-                      d="M5 13c0-5.088 2.903-9.436 7-11.182C16.097 3.564 19 7.912 19 13c0 .823-.076 1.626-.22 2.403l1.94 1.832a.5.5 0 0 1 .095.603l-2.495 4.575a.5.5 0 0 1-.793.114l-2.234-2.234a1 1 0 0 0-.707-.293H9.414a1 1 0 0 0-.707.293l-2.234 2.234a.5.5 0 0 1-.793-.114l-2.495-4.575a.5.5 0 0 1 .095-.603l1.94-1.832C5.077 14.626 5 13.823 5 13zm1.476 6.696l.817-.817A3 3 0 0 1 9.414 18h5.172a3 3 0 0 1 2.121.879l.817.817.982-1.8-1.1-1.04a2 2 0 0 1-.593-1.82c.124-.664.187-1.345.187-2.036 0-3.87-1.995-7.3-5-8.96C8.995 5.7 7 9.13 7 13c0 .691.063 1.372.187 2.037a2 2 0 0 1-.593 1.82l-1.1 1.039.982 1.8zM12 13a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
-                      fill="currentColor"
-                    ></path>
-                  </svg>
-                  <span>Launch</span>
+                    <div class="btn-progress-fill"></div>
+                    <svg class="btn-icon" height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path
+                            d="M5 13c0-5.088 2.903-9.436 7-11.182C16.097 3.564 19 7.912 19 13c0 .823-.076 1.626-.22 2.403l1.94 1.832a.5.5 0 0 1 .095.603l-2.495 4.575a.5.5 0 0 1-.793.114l-2.234-2.234a1 1 0 0 0-.707-.293H9.414a1 1 0 0 0-.707.293l-2.234 2.234a.5.5 0 0 1-.793-.114l-2.495-4.575a.5.5 0 0 1 .095-.603l1.94-1.832C5.077 14.626 5 13.823 5 13zm1.476 6.696l.817-.817A3 3 0 0 1 9.414 18h5.172a3 3 0 0 1 2.121.879l.817.817.982-1.8-1.1-1.04a2 2 0 0 1-.593-1.82c.124-.664.187-1.345.187-2.036 0-3.87-1.995-7.3-5-8.96C8.995 5.7 7 9.13 7 13c0 .691.063 1.372.187 2.037a2 2 0 0 1-.593 1.82l-1.1 1.039.982 1.8zM12 13a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
+                            fill="currentColor"></path>
+                    </svg>
+                    <svg class="btn-spinner" style="display: none;" xmlns="http://www.w3.org/2000/svg" height="20"
+                        viewBox="0 0 24 24" width="20" fill="currentColor">
+                        <path
+                            d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z" />
+                    </svg>
+                    <span class="btn-text">Launch</span>
                 </button>
                 <div class="instance-select"></div>
-            </div>
-            <div class="info-starting-game">
-                <div class="info-starting-game-text">Connexion...</div>
-                <progress value="0" max="0" class="progress-bar"></progress>
             </div>
         </div>
 
         <!-- From Uiverse.io by vinodjangid07 -->
         <div class="settings-btn">
-            <span class="bar bar1"></span>
-            <span class="bar bar2"></span>
-            <span class="bar bar1"></span>
+            <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 0 24 24" width="28" fill="currentColor">
+                <path
+                    d="M19.14 12.94c.04-.31.06-.63.06-.94 0-.31-.02-.63-.06-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.04.31-.06.63-.06.94s.02.63.06.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z" />
+            </svg>
         </div>
-        
+
     </div>
 
     <div class="instance-popup">
@@ -74,4 +73,36 @@
             <div class="instances-List"></div>
         </div>
     </div>
-</div>
+
+    <div class="player-popup">
+        <div class="player-tab" style="position:relative;">
+            <div class="close-popup icon-close close-player-popup"
+                style="top: 15px; right: 15px; width: 28px; height: 28px;"></div>
+
+            <p class="titre-account-modal"
+                style="text-align:center; width:100%; font-size:1.4rem; font-weight:700; margin-bottom:15px; margin-top:5px; color:#fff;">
+                Mes Comptes</p>
+
+            <div class="accounts-list-home content-scroll"
+                style="width:100%; max-height:300px; overflow-y:auto; display:flex; flex-direction:column; gap:10px;">
+            </div>
+
+            <div class="player-actions"
+                style="display:flex; justify-content:center; width:100%; margin-top:20px; box-sizing: border-box;">
+                <div class="player-option-btn-modal" id="add-account-modal"
+                    style="width: 50px; height: 50px; padding: 0; display:flex; align-items:center; justify-content:center; border-radius:50%; font-size:1.5rem;">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"
+                        fill="currentColor">
+                        <path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z" />
+                </div>
+            </div>
+        </div>
+
+        <div class="news-popup">
+            <div class="news-modal-tab">
+                <div class="close-popup icon-close close-news-popup"></div>
+                <p class="titre-news-modal">Toutes les actualités</p>
+                <div class="news-modal-list content-scroll"></div>
+            </div>
+        </div>
+    </div>
