--- a/src/panels/settings.html
+++ b/src/panels/settings.html
@@ -65,10 +65,11 @@
             </div>
             <div class="settings-elements content-evenly">
                 <input type="text" class="java-path-input-text" disabled>
-                <input type="file" class="java-path-input-file" accept="application/octet-stream" />
+                <input type="file" class="java-path-input-file" accept="application/octet-stream"
+                    style="display: none;" />
                 <div class="java-path-box">
                     <div class="java-path-set java-path-btn">Changer</div>
-                    <div class="java-path-reset java-path-btn">Par defaut</div>
+                    <div class="java-path-reset java-path-btn">Par défaut</div>
                 </div>
             </div>
         </div>
@@ -112,18 +113,17 @@
             </div>
         </div>
 
-        <div class="titre-tab element-hover-2">Thème clair et sombre</div>
+        <div class="titre-tab element-hover-2">Thème</div>
         <div class="settings-elements-box">
             <div class="setting-text">
-                Choisissez entre le thème clair et le thème sombre pour personnaliser l'apparence du launcher.<br><br>
-
-                La modification du thème peut influencer la lisibilité et l'expérience visuelle.<br>
-                Sélectionnez celui qui vous convient le mieux en fonction de vos préférences.
+                Personnalisez l'apparence du launcher.<br><br>
+                <em style="opacity: 0.6; font-size: 0.9em;">💡 Le mode clair sera peut-être disponible dans une future
+                    mise à jour.</em>
             </div>
             <div class="settings-elements content-center theme-box">
-                <div class="theme-btn theme-btn-clair">Clair</div>
+                <div class="theme-btn theme-btn-clair disabled" title="Arrive bientôt">Clair</div>
                 <div class="theme-btn theme-btn-sombre">Sombre</div>
-                <div class="theme-btn theme-btn-auto">Automatique</div>
+                <div class="theme-btn theme-btn-auto disabled" title="Arrive bientôt">Automatique</div>
             </div>
         </div>
 
@@ -140,16 +140,6 @@
             </div>
         </div>
 
-        <!-- <div class="titre-tab">Environnement INTEL</div>
-        <div class="settings-elements-box">
-            <div class="setting-text">
-                pour les jouer avec les proseceurs apple silicon 
-            </div>
 
-            <div class="settings-elements content-evenly close-box">
-                <div class="close-launcher close-btn">Environnement INTEL</div>
-                <div class="close-none close-btn">Environnement SILICON</div>
-            </div>
-        </div> -->
     </div>
 </div>
