--- a/src/panels/login.html
+++ b/src/panels/login.html
@@ -1,55 +1,63 @@
 <div class="container">
     <div class="login-home login-tabs">
-        <div class="login-text">Authentification avec microsoft</div>
+        <div class="login-text">Authentification</div>
 
         <div class="login-options">
-            <!-- From Uiverse.io by adamgiebl -->
             <div class="button-container">
-                <button class="connect connect-home">Connect with Microsoft</button>
+                <button class="connect connect-home">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 23 23"
+                        fill="currentColor">
+                        <path d="M0 0h11v11H0z" />
+                        <path d="M12 0h11v11H12z" />
+                        <path d="M0 12h11v11H0z" />
+                        <path d="M12 12h11v11H12z" />
+                    </svg>
+                    Connect with Microsoft
+                </button>
             </div>
-            
 
-            <button class="cancel cancel-home"  style="display: none;">Annuler</button>
+            <button class="cancel cancel-home" style="display: none;">Annuler</button>
         </div>
     </div>
+</div>
 
-    <div class="login-offline login-tabs">
-        <div class="login-text">Veuillez entrer votre pseudo</div>
+<div class="login-offline login-tabs">
+    <div class="login-text">Veuillez entrer votre pseudo</div>
 
-        <div class="input-login">
-            <input type="text" class="email email-offline" placeholder="Pseudo" />
-        </div>
-
-        <div class="login-options">
-            <button class="connect connect-offline">Connexion</button>
-            <button class="cancel cancel-offline" style="display: none;">Annuler</button>
-        </div>
+    <div class="input-login">
+        <input type="text" class="email email-offline" placeholder="Pseudo" />
     </div>
 
-    <div class="login-AZauth login-tabs">
-        <div class="login-text">Veuillez vous connecter afin de jouer.</div>
+    <div class="login-options">
+        <button class="connect connect-offline">Connexion</button>
+        <button class="cancel cancel-offline" style="display: none;">Annuler</button>
+    </div>
+</div>
 
-        <div class="input-login">
-            <input type="text" class="email email-AZauth" placeholder="E-mail" />
-            <input type="password" class="password password-AZauth" placeholder="Password" />
-        </div>
+<div class="login-AZauth login-tabs">
+    <div class="login-text">Veuillez vous connecter afin de jouer.</div>
 
-        <div class="login-options">
-            <button class="connect connect-AZauth">Connexion</button>
-            <button class="cancel cancel-AZauth" style="display: none;">Annuler</button>
-        </div>
+    <div class="input-login">
+        <input type="text" class="email email-AZauth" placeholder="E-mail" />
+        <input type="password" class="password password-AZauth" placeholder="Password" />
     </div>
 
-    <div class="login-AZauth-A2F login-tabs">
-        <div class="login-text">Veuillez entrer le code de sécurité.</div>
-
-        <div class="input-login">
-            <input type="text" class="A2F A2F-AZauth" placeholder="Code" />
-        </div>
-
-        <div class="login-options">
-            <button class="connect connect-AZauth-A2F">Valider</button>
-            <button class="cancel cancel-AZauth-A2F">Annuler</button>
-        </div>
+    <div class="login-options">
+        <button class="connect connect-AZauth">Connexion</button>
+        <button class="cancel cancel-AZauth" style="display: none;">Annuler</button>
     </div>
+</div>
+
+<div class="login-AZauth-A2F login-tabs">
+    <div class="login-text">Veuillez entrer le code de sécurité.</div>
+
+    <div class="input-login">
+        <input type="text" class="A2F A2F-AZauth" placeholder="Code" />
+    </div>
+
+    <div class="login-options">
+        <button class="connect connect-AZauth-A2F">Valider</button>
+        <button class="cancel cancel-AZauth-A2F">Annuler</button>
+    </div>
+</div>
 </div>
